# Raidillon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/python/: CMakeLists.txt  raidillon_bindings.cc  setup.py
docs/index/: README.md
examples/cpp/: CMakeLists.txt  Flat.cc  IVFFlat.cc  flat.cc
examples/python/: Flat.py  IVFFlat.py
examples/python/image_search/: IVFFlat.py  README.md  requirements.txt
examples/python/image_search/src/: display.py
include/: collection.h  database.h  index.h  raidillon.h
include/index/: Flat.h  IVFFlat.h  flat.h
include/utils/: distance.h
src/: CMakeLists.txt  collection.cc  database.cc
src/index/: Flat.cc  IVFFlat.cc  flat.cc
